# kafka-utils

./: .dockerignore  Build.dockerfile  Build2.dockerfile  Cargo.toml  Cross.toml  README.md  build.sh  docker-compose-build.yml  docker-compose.yaml
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: iam.rs  kafka.rs  main.rs
cli/src/cmd/: broker.rs  consumer.rs  mod.rs  topic.rs
common/: Cargo.toml
common/src/kafka/: broker.rs  client.rs  group.rs  mod.rs  topic.rs  types.rs
config/: provectus.yml
src/: kafka.rs  main.rs  types.rs
src/cmd/: broker.rs  consumer.rs  mod.rs  table.rs  topic.rs
tui/: Cargo.toml
tui/src/: app.rs  cli.rs  main.rs  table.rs  test_data.rs  tui.rs
tui/src/command/: list_topics.rs  mod.rs
