[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
tabled = "0.16.0"
common = { path = "../common" }
rdkafka = "0.36.2"
aws-types = "1.3.3"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
env_logger = "0.11.5"